syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "ChecksBulkSetProto";

package liquibase.pro;

service ChecksBulkSetService {
  rpc execute(Checks.BulkSetRequest) returns (Response) {}
}

/* [PRO]
Set the properties of all qualifying checks with one command */
message Checks {
  message BulkSetRequest {
    optional string auto_update = 1; // Allows automatic backup and updating of liquibase.checks.conf file when new quality checks are available, or for file format changes. Options: [on|off]
    optional string checks_settings_file = 2; // Relative or fully qualified path to a configuration file for checks execution
    optional bool disable = 3; // Disable all qualifying checks in the checks settings file
    optional bool enable = 4; // Enable all qualifying checks in the checks settings file
    optional bool force = 5; // Do not ask for confirmation when running this command
    optional string severity = 6; // Set the severity of all checks to the value specified
    liquibase.GlobalOptions global_options = 7;
  }
}

message Response {
  string message = 1;
}
